<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewSupplyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addtooltoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toolname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_tool_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toolprice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_tool_price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/toolsavailable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_how_much_is_available_in_stock" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/click_below_to_add_supply_image" />

    <ImageView
        android:id="@+id/supplyphoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/stock_icon"
        android:src="@drawable/ic_image_black_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/savetool"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/save"
        android:textStyle="bold"
        app:cornerRadius="10dp" />


</LinearLayout>